# midisx

./: CMakeLists.txt  CMakePresets.json  LICENSE
src/: constants.h  manufacturers.h  reader.cpp  reader.h  reader_test.cpp  validator.cpp  validator.h  validator_test.cpp  wasm_bindings.cpp  writer.cpp  writer.h  writer_test.cpp
